(assistant) Migrate to Jooby framework